--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
+  "type": "module",
   "scripts": {
     "publish": "npm publish --access public",
     "lint": "eslint src --fix",
-    "build": "esbuild src/index.js --bundle --keep-names --minify --sourcemap --format=esm --outfile=dist/index.js"
+    "build": "node esbuild.config.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
