--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "format": "prettier --write ./src",
-    "build": "node esbuild.config.js"
+    "build": "node esbuild.config.js && babel --out-file ./dist/components.js ./dist/components.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,11 @@
   },
   "homepage": "https://github.com/jyostudio/components#readme",
   "devDependencies": {
+    "@babel/cli": "^7.27.2",
+    "@babel/core": "^7.27.3",
+    "@babel/plugin-proposal-decorators": "^7.27.1",
+    "@babel/plugin-proposal-explicit-resource-management": "^7.27.3",
+    "@babel/preset-env": "^7.27.2",
     "@eslint/js": "^9.24.0",
     "@jyostudio/enum": "^0.1.3",
     "@jyostudio/io": "^0.1.4",
